--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,11 @@ env:
 
 jobs:
   fast_finish: true
+  exclude:
+    - php: 7.2
+      env: LARAVEL=^8.0
+    - php: 7.4
+      env: LARAVEL=5.7.*
 
 before_install:
   - phpenv config-rm xdebug.ini || true
