--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          stopOnFailure="false"
 >
     <php>
-        <env name="APP_KEY" value="testing"/>
+        <env name="DB_CONNECTION" value="testing"/>
     </php>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
