--- a/.travis.yml
+++ b/.travis.yml
@@ -5,35 +5,22 @@ cache:
     - vendor
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
   - 7.4
 
 env:
   global:
     - COMPOSER_MEMORY_LIMIT=-1
   jobs:
-    - LARAVEL=5.7.*
-    - LARAVEL=5.8.*
-    - LARAVEL=^6.0
-    - LARAVEL=^7.0
     - LARAVEL=^8.0
 
 jobs:
   fast_finish: true
-  exclude:
-    - php: 7.2
-      env: LARAVEL=^8.0
-    - php: 7.4
-      env: LARAVEL=5.7.*
 
 before_install:
   - phpenv config-rm xdebug.ini || true
 
 install:
   - travis_retry composer self-update --2
-  - travis_retry composer install --prefer-dist --no-interaction
-  - if [ "${LARAVEL}" = "^8.0" ]; then travis_retry composer require "laravel/legacy-factories" --prefer-dist --no-interaction; fi
+  - travis_retry composer update --with "illuminate/contracts=${LARAVEL}" --prefer-dist --no-interaction
 
-script: vendor/bin/phpunit --verbose
+script: vendor/bin/phpunit --verbose2
