--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.4",
     "ext-json": "*",
-    "illuminate/contracts": "^7.0 | ^8.0",
-    "spatie/data-transfer-object": "^1.13"
+    "illuminate/contracts": "^8.0",
+    "spatie/data-transfer-object": "^2.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0|^7.0|^8.0",
-    "orchestra/testbench": "^3.7|^4.0|^5.0|^6.0|^7.5"
+    "phpunit/phpunit": "^8.0",
+    "orchestra/testbench": "^6.0"
   },
   "config": {
     "sort-packages": true
