--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ install:
   - travis_retry composer self-update --2
   - travis_retry composer update --with "illuminate/contracts=${LARAVEL}" --prefer-dist --no-interaction
 
-script: vendor/bin/phpunit --verbose2
+script: vendor/bin/phpunit --verbose
