--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "php": ">=7.4",
     "ext-json": "*",
     "illuminate/contracts": "^8.0",
-    "spatie/data-transfer-object": "^2.5"
+    "spatie/data-transfer-object": "^2.5|^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
