--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.0",
     "ext-json": "*",
     "illuminate/contracts": "^8.0",
-    "spatie/data-transfer-object": "^2.5|^3.0"
+    "spatie/data-transfer-object": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0",
