--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
   "require": {
     "php": ">=8.0",
     "ext-json": "*",
-    "illuminate/contracts": "^8.0",
-    "spatie/data-transfer-object": "^3.0"
+    "illuminate/contracts": ">=8.0",
+    "spatie/data-transfer-object": ">=3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "orchestra/testbench": "^6.0"
+    "phpunit/phpunit": ">=8.0",
+    "orchestra/testbench": "6.0"
   },
   "config": {
     "sort-packages": true
